🔥 Remove stytch and add create user fun
