# packages/api/src/@core/auth/dto/create-user.dto.ts
@@ -8,8 +8,6 @@ export class CreateUserDto {
   @ApiProperty()
   email: string;
   @ApiProperty()
-  stytch_id_user: string;
-  @ApiProperty()
   strategy: string;
   @ApiPropertyOptional()
   password_hash: string;
